# AI_buseval

./: README.md  README_zh.md  design.md  pyproject.toml
examples/: full_menu.yaml  gmsl_links.yaml  sample.dbc  sample_heavy.dbc
src/buseval/: __init__.py  cli.py  lint.py  loader.py  schema.py
src/buseval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/buseval/dbc/: __init__.py  health_report.py  parser.py
src/buseval/engine/: __init__.py  margin.py  predictor.py
src/buseval/estimators/: __init__.py  _coefficients.yaml  registry.py
src/buseval/estimators/builtins/: __init__.py  can_dbc.py  can_load.py  eth.py  flash.py  gpu_display.py  isp.py  mipi.py  npu.py  spi.py  usb.py  venc_vdec.py
src/buseval/gmsl/: __init__.py  calculator.py  report.py
src/buseval/presets/: j5.yaml  orin_nx.yaml  rk3588.yaml  s32g.yaml  sa8155.yaml  t527.yaml  tda4vh.yaml
src/buseval/report/: __init__.py  structured.py  terminal.py
tests/: test_engine.py  test_estimators.py  test_gmsl.py
