[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buseval"
version = "0.1.0"
description = "SoC bandwidth evaluation tool: predict and measure DDR bandwidth sufficiency for multi-core heterogeneous chips."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "busval contributors"}]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "cantools>=39.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
buseval = "buseval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
buseval = ["estimators/_coefficients.yaml", "presets/*.yaml"]
